# hackillinois2025

./: .gitignore  Dockerfile  README  docker-compose.yml  init.sql  package.json  pnpm-lock.yaml  setup.md  types.ts
app/: layout.tsx  page.tsx
app/components/: CustomNode.tsx  EmailNode.module.css  EmailNode.tsx  EmailPopup.tsx  EmailSidebar.tsx  FlowCanvas.module.css  FlowCanvas.tsx  GroupNode.module.css  GroupNode.tsx  Header.module.css  Header.tsx  MailForm.tsx  QuickTest.tsx
app/contexts/: EmailContext.tsx
app/graphview/: page.tsx
app/login/: page.tsx
app/sendmail/: page.tsx
app/tabularview/: page.tsx
lib/: auth.ts  db.ts  gmail.ts  groups.ts  openai.ts
topic-server/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
